# doboom-proto

./: .babelrc  .editorconfig  .gitignore  CODEOWNERS  README.md  app.js  devServer.js  index.js  package.json
api/: LICENSE  Slashie.cabal
api/src/: Lib.hs
backend/: index.js
backend-dist/: index.js
backend-dist/auth/: config.js  index.js
backend-dist/auth/strategies/: email.js  facebook.js  google.js  jwt.js  (+1 more)
backend-dist/database/: index.js
backend-dist/middleware/: index.js
backend-dist/models/: user.js
backend-dist/renderer/: index.js
backend-dist/routes/: index.js
backend-dist/server/: index.js
backend/auth/: config.js  index.js
backend/database/: config.json  index.js  mongo-index.js
backend/middleware/: index.js
backend/models/: index.js  organization.js  user.js
backend/mongo-models/: user.js
backend/renderer/: index.js
backend/routes/: index.js
backend/server/: index.js
docs/: 3-rd-parties-authentication.md  from backend to frontend.md  how-I-integrate-this.md
frontend/: README.md  app.js  client-entry.js  entry-client.js  index.template.html  server-entry.js
frontend/Doboom/: element.html  homepage.html  profile.html  startup_page.html  team_page.html
frontend/router/: index.js
frontend/store/: api.js  create-api-client.js  create-api-server.js  index.js
server/: index.js  middleware.js  package.json
server/apis/: index.js
server/auth/: config.js  index.js
server/database/: index.js
server/middleware/: index.js
server/models/: user.js
server/passport/: config.js  index.js
server/routes/: index.js
(+21 files in other folders)
