name:                Slashie
version:             0.0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/zypeh/servant#readme
license:             BSD3
license-file:        LICENSE
author:              zypeh
maintainer:          zypeh.geek@gmail.com
copyright:           BSD-3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Paths_Slashie
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , http-client
                     , http-client-tls
                     , mtl
                     , servant-server
                     , text
                     , transformers
                     , wai
                     , warp
  default-language:    Haskell2010

executable Slashie-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Slashie
  default-language:    Haskell2010

test-suite Slashie-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zypeh/doboom-proto
